Small layout refactoring. Advertising setup page in progress

--- a/alpha/accounts/templates/accounts/in_the_loop_settings.html
+++ b/alpha/accounts/templates/accounts/in_the_loop_settings.html
@@ -118,7 +118,7 @@
                         </table>
                     </div>                    
 
-                    <input type="submit" name="submitoptions" class="button submit" value="Save" />
+                    <input type="submit" name="submitoptions" class="button submit standart" value="Save" />
                 </form>
             </div>                
         </div>
