--- a/alpha/accounts/templates/accounts/reminder_settings.html
+++ b/alpha/accounts/templates/accounts/reminder_settings.html
@@ -144,7 +144,7 @@
                             </tr>
                         </table>
                     </div>
-                    <input type="submit" name="submitoptions" class="button submit" value="Save" />
+                    <input type="submit" name="submitoptions" class="button submit standart" value="Save" />
                 </form>
             </div>                
         </div>
