--- a/alpha/accounts/templates/venue_accounts/edit_venue_account.html
+++ b/alpha/accounts/templates/venue_accounts/edit_venue_account.html
@@ -203,7 +203,7 @@
                             </tr>
                         </table>
 
-                        <input type="submit" name="submitoptions" class="button submit" value="Save" />
+                        <input type="submit" name="submitoptions" class="button standart submit" value="Save" />
                     </form>
                 </div>
 
