--- a/alpha/advertising/templates/advertising/setup.html
+++ b/alpha/advertising/templates/advertising/setup.html
@@ -10,11 +10,16 @@
 
 {% block head %}
     <link href="{{STATIC_URL}}styles/widgets.css" rel="stylesheet" type="text/css" />    
+    <link href="{{STATIC_URL}}styles/advertising-setup.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/accounts/accounts.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}css/crop.css" rel="stylesheet" type="text/css" />
+
+    <script src="{{STATIC_URL}}js/jquery.balloon.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/advertising/setup-page.js" type="text/javascript"></script>    
 {% endblock %}
 
 {% block page %}
-    <div class="primary-content">
+    <div class="primary-content advertising-setup">
         <h1>
             Advertising - Setup
         </h1>
@@ -33,88 +38,262 @@
                                     <span class="error">{{ error }}</span>
                                 {% endfor %}
                             </li>
+                            <li id="all-info">
+                                {% for error in form.budget.errors %}
+                                    <span class="error">{{ error }}</span>
+                                {% endfor %}
+                            </li>
                         </ul>
                     </div>
                     
                 {% endif %}
-                <form method="post" name="advertising-setup" >
+                <form  enctype="multipart/form-data" method="post" name="advertising-setup" >
                     {% csrf_token %}
-                    <div class="campaign-name options">
-                        Name of Campaign
-                        <!--a href="javascript:void;" class="balloon">
-                            <div class="buttonq"></div>
-                        </a-->
+                    <div class="campaign-name">
+                        Name of Campaign                        
                         {{ form.name }}
                         Enter the name of your campaign.
                     </div>
-
+                    
                     Pick the type of ad(s) they want to put on City Fusion: Box, Skyscraper, Banner, etc.
+                    
                     <!--a href="javascript:void;" class="balloon">
                         <div class="buttonq"></div>
                     </a-->
-                    <div class="advertising-types options options-white">
-                        
+                    <div class="advertising-types options options-white">                        
                         <table>
                             <tr>
                                 <th>
                                     CPM
-                                    <!--a href="javascript:void;" class="balloon">
+                                    <a href="javascript:void;" class="balloon">
                                         <div class="buttonq"></div>
-                                    </a-->
+                                    </a>
+                                    <div class="balloon-content">
+                                        <h3>
+                                            Help - Advertising Campaign
+                                            <i>[CPM]:</i>
+                                        </h3>
+                                        <p>
+                                            Cost per view
+                                        </p>
+                                    </div>
                                 </th>
                                 <th>
                                     CMC
-                                    <!--a href="javascript:void;" class="balloon">
+                                    <a href="javascript:void;" class="balloon">
                                         <div class="buttonq"></div>
-                                    </a-->
+                                    </a>
+                                    <div class="balloon-content">
+                                        <h3>
+                                            Help - Advertising Campaign
+                                            <i>[CPC]:</i>
+                                        </h3>
+                                        <p>
+                                            Cost per click
+                                        </p>
+                                    </div>
                                 </th>
                                 <th>
                                     Size of Ad
-                                    <!--a href="javascript:void;" class="balloon">
+                                    <a href="javascript:void;" class="balloon">
                                         <div class="buttonq"></div>
-                                    </a-->
+                                    </a>
+                                    <div class="balloon-content">
+                                        <h3>
+                                            Help - Advertising Campaign
+                                            <i>[Size]:</i>
+                                        </h3>
+                                        <p>
+                                            Choose ad size
+                                        </p>
+                                    </div>
                                 </th>
                                 <th>
                                     CPM Prices
-                                    <!--a href="javascript:void;" class="balloon">
+                                    <a href="javascript:void;" class="balloon">
                                         <div class="buttonq"></div>
-                                    </a-->
+                                    </a>
+                                    <div class="balloon-content">
+                                        <h3>
+                                            Help - Advertising Campaign
+                                            <i>[CPM Price]:</i>
+                                        </h3>
+                                        <p>
+                                            Price for 1000 views
+                                        </p>
+                                    </div>
                                 </th>
                                 <th>
                                     CPC Prices
-                                    <!--a href="javascript:void;" class="balloon">
+                                    <a href="javascript:void;" class="balloon">
                                         <div class="buttonq"></div>
-                                    </a-->
+                                    </a>
+                                    <div class="balloon-content">
+                                        <h3>
+                                            Help - Advertising Campaign
+                                            <i>[CPC Price]:</i>
+                                        </h3>
+                                        <p>
+                                            Price for 1000 clicks
+                                        </p>
+                                    </div>
                                 </th>                                
                             </tr>
+
                             {% for advertising_type in advertising_types %}
                             <tr>
-                                <td>
+                                <td class="center">
                                     <div class="radio">                                        
-                                        <input type="radio" id="advertising_type_{{ advertising_type.id }}_cpm" value="HOURS" name="advertising_type_{{ advertising_type.id }}_payment_type">
+                                        <input type="radio" id="advertising_type_{{ advertising_type.id }}_cpm" value="CPM" name="advertising_type_{{ advertising_type.id }}_payment_type" data-ad-type="{{ advertising_type.id }}">
                                         <label for="advertising_type_{{ advertising_type.id }}_cpm"></label>
                                     </div>
                                 </td>
-                                <td>
+                                <td class="center">
                                     <div class="radio">                                        
-                                        <input type="radio" id="advertising_type_{{ advertising_type.id }}_cmc" value="HOURS" name="advertising_type_{{ advertising_type.id }}_payment_type">
+                                        <input type="radio" id="advertising_type_{{ advertising_type.id }}_cmc" value="CMC" name="advertising_type_{{ advertising_type.id }}_payment_type" data-ad-type="{{ advertising_type.id }}">
                                         <label for="advertising_type_{{ advertising_type.id }}_cmc"></label>
                                     </div>
                                 </td>
                                 <td>
-                                    {{ advertising_type }}
+                                    <div class="checkbox">
+                                        <input type="checkbox" id="id_advertising_type_{{ advertising_type.id }}" value="{{ advertising_type.id }}" name="types" data-ad-type="{{ advertising_type.id }}">
+                                        <label for="id_advertising_type_{{ advertising_type.id }}"></label>
+                                        <label for="id_advertising_type_{{ advertising_type.id }}">{{ advertising_type }}</label>
+                                    </div>                                    
                                 </td>
-                                <td>
+                                <td class="center">                                    
                                     {{ advertising_type.cpm_price }}
                                 </td>
-                                <td>
+                                <td class="center">
                                     {{ advertising_type.cpc_price }}
                                 </td>
                             </tr>
                             {% endfor %}                            
                         </table>
                     </div>
-                    <input type="submit" name="submitoptions" class="button submit" value="Save" />
+
+                    <div class="advertising-uploads">
+                        <table>
+                        {% for advertising_type in advertising_types %}                        
+                            <tr data-ad-type="{{ advertising_type.id }}">
+                                <td>Upload {{advertising_type}}</td>
+                                <td>
+                                    <input type="file" name="{{advertising_type}}">
+                                </td>
+                                <td>
+                                    <span {% if advertising_type.reviewed %}class="reviewed"{% endif %}>
+                                        {% if advertising_type.reviewed %}
+                                            Good
+                                        {% else %}
+                                            Review
+                                        {% endif %}
+                                    </span>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </table>
+                    </div>
+                    
+                    Select province/territory to show your ad (Choices)
+                    
+                    <div class="advertising-territories options">
+                        <div class="teritory-node">
+                            <div class="checkbox">
+                                <input {% if form.all_off_canada.value %}checked="checked"{% endif %} type="checkbox" id="id_all_of_canada" value="true" name="all_of_canada" />
+                                <label for="id_all_of_canada"></label>
+                                <label for="id_all_of_canada">All of Canada</label>
+                            </div>
+                        </div>
+                        {% for region in form.fields.regions.queryset %}
+                        <div class="teritory-node region">
+                            <div class="checkbox">
+                                <input {% for current_region in campaign.regions.all %}{% if region.pk == current_region.pk %}checked="checked"{% endif %}{% endfor %} type="checkbox" id="id_regions_{{ forloop.counter0 }}" value="{{ region.id }}" name="regions" />
+                                <label for="id_regions_{{ forloop.counter0 }}"></label>
+                                <label for="id_regions_{{ forloop.counter0 }}">
+                                    {{ region.name }}
+                                </label>
+                            </div>
+                        </div>
+                        {% endfor %}
+                        <div class="clr"></div>
+                    </div>
+
+                    <div class="pay-now-header">
+                        Pay Now With
+                    </div>
+                    <div class="pay-now-widget">
+                        <div class="budget">
+                            <table>
+                                <tr>
+                                    <td>Budget:</td>
+                                    <td>
+                                        <input type="text" name="budget" value="0.0">
+                                        <input type="hidden" name="budget_currency" value="CAD">
+                                    </td>
+                                    <td>
+                                        <a href="javascript:void;" class="balloon">
+                                            <div class="buttonq"></div>
+                                        </a>
+                                        <div class="balloon-content">
+                                            <h3>
+                                                Help - Advertising Campaign
+                                                <i>[Budget]:</i>
+                                            </h3>
+                                            <p>
+                                                Budget for campaign
+                                            </p>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </table>
+                            
+                        </div>
+                        <div class="choose-payment-system">
+                            <table>
+                                <tr>
+                                    <td>
+                                        <div class="checkbox">
+                                            <input id="payment_paypal_id" type="radio" name="payment_system" value="paypal">
+                                            <label for="payment_paypal_id"></label>
+                                            <label for="payment_paypal_id">
+                                                <img src="{{ STATIC_URL }}/images/featured/paypal.png"/>
+                                            </label>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="checkbox">
+                                            <input id="payment_visa_id" type="radio" name="payment_system" value="visa">
+                                            <label for="payment_visa_id"></label>
+                                            <label for="payment_visa_id">
+                                                <img src="{{ STATIC_URL }}/images/featured/visa.png"/>
+                                            </label>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="checkbox">
+                                            <input id="payment_email_money_id" type="radio" name="payment_system" value="email_money_transfer">
+                                            <label for="payment_email_money_id"></label>
+                                            <label for="payment_email_money_id">
+                                                <img src="{{ STATIC_URL }}/images/featured/email_money_transfer.png"/>
+                                            </label>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="checkbox">
+                                            <input id="payment_master_card_id" type="radio" name="payment_system" value="master_card">
+                                            <label for="payment_master_card_id"></label>
+                                            <label for="payment_master_card_id">
+                                                <img src="{{ STATIC_URL }}/images/featured/master_card.png"/>
+                                            </label>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="pay-now-footer">
+                        <input type="submit" name="submitoptions" class="button standart submit" value="Save" />
+                    </div>
                 </form>
             </div>                
         </div>
