--- a/alpha/event/templates/events/setup_featured_event.html
+++ b/alpha/event/templates/events/setup_featured_event.html
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="pay-now-footer">
-                    <input type="submit" name="submitoptions" class="button submit" value="Save">
+                    <input type="submit" name="submitoptions" class="button standart submit" value="Save">
                 </div>    
             </form>
         </div>
