--- a/alpha/accounts/templates/userena/profile_detail.html
+++ b/alpha/accounts/templates/userena/profile_detail.html
@@ -56,7 +56,7 @@
                             <a>Edit my Preferences</a>
                         </li>
                         <li>
-                            <a>Edit my Account</a>
+                            <a href="{% url 'user_profile_edit' profile.user.username %}">Edit my Account</a>
                         </li>
                         <li>
                             <a href="{% url 'reminder_settings' %}">Edit Reminder Settings</a>
