--- a/alpha/event/static/css/crop.css
+++ b/alpha/event/static/css/crop.css
@@ -1,37 +1,3 @@
-.qq-upload-list {
-    display:none;
-}
-
-.picture {
-    position:relative;
-}
-
-#id_picture {
-    display:none;
-}
-
-#file-uploader {
-    margin-left:10px;
-}
-
-#file-uploader .qq-upload-button{
-    font-size: 1em;
-    padding: 5px 10px;    
-    background: #EFEFEF;
-    border: 1px solid #E6E6E6;
-    -moz-border-radius: 10px;
-    -khtml-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    cursor: pointer;    
-    color:#000;
-}
-
-#file-uploader .qq-upload-button:hover {
-    color:#234;
-    border:1px solid #79B7E7;
-}
-
 .full-screen-popup {    
     position:relative;
     width:800px;
@@ -111,14 +77,15 @@
 
 .price-td .inputfield {
     position:relative;
-    width: 200px;    
+    width: 196px;    
     margin-right: 75px;    
-    left:-3px;
+    top: 1px;
+    left: -10px;
     margin-left:-3px;
     z-index:0;
 }
 
-[for=id_price_free] {
+.price-td .checkbox {
     position: relative;
     display: inline-block;
     height: 25px;
@@ -135,10 +102,6 @@
     padding-left: 6px;
     width: 60px;
     z-index:1;
-}
-[for=id_price_free] label{    
-    top: 3px;    
-    left: -1px;
 }
 
 .top-align {
