--- a/alpha/event/static/styles/accounts/accounts.css
+++ b/alpha/event/static/styles/accounts/accounts.css
@@ -121,13 +121,6 @@
     color: #5dacfd;    
 }
 
-.main-content .submit {
-    margin-left:20px;
-    margin-top:30px;
-    padding: 0 40px;
-    font-size: 1.2em;
-}
-
 .options {
     padding: 24px 18px;
     color: #454545;
@@ -161,43 +154,11 @@
     width: 30px;
 }
 
-.reminder-time-options table td.first div {
-    height: 16px;
-}
-
 .options table td.second {
     color: #454545;
     font-weight: bold;
     width: 110px;
 }
-
-.options table td .checkbox {
-    position: relative;
-    top: 3px;
-}
-
-.options input {
-    color: #454545;
-    background: #fff;
-    border: 1px solid #ababab;
-    outline: 0;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-    padding: 0 5px;
-    height: 20px;
-}
-
-.options textarea {
-    color: #454545;
-    background: #fff;
-    border: 1px solid #ababab;
-    outline: 0;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;    
-}
-
 
 #id_reminder_email, 
 #id_reminder_phonenumber,
@@ -342,9 +303,9 @@
     height: 30px;
     min-height: 30px;
     max-height: 30px;
-
-    top: 4px;
+    top: 3px;
     right: -5px;
+    width: 90px;
 }
 
 .account-options h3 {
