--- a/alpha/event/templates/events/_browse_events_list.html
+++ b/alpha/event/templates/events/_browse_events_list.html
@@ -9,7 +9,7 @@
     </header>
     {% paginate 5 eventsFilter.qs as events %}
     {% for event in events %}    
-        <div class="entry-info">
+        <div class="entry-info" data-no-turbolink>
             <div class="entry-img-prev">
                 {% if event.picture %}
                     <img src="{% cropped_thumbnail event "cropping" width=60 %}" height="60px" weight="60px">
